--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.4'
-	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
+	id 'org.springframework.boot' version '3.1.10'
+	id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'Ict'
+group = 'ict'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+
+java {
+	sourceCompatibility = '17'
+}
 
 configurations {
 	compileOnly {
@@ -19,27 +22,31 @@ repositories {
 }
 
 dependencies {
-	//log4j
-	implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
-	implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
 	//org.json
 	implementation 'org.json:json:20220924'
-	//default
+	// Swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+	// spring boot
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'mysql:mysql-connector-java'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+	testImplementation 'org.springframework.security:spring-security-test'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
+	annotationProcessor 'org.projectlombok:lombok'
+
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
 tasks.withType(JavaCompile){
 	options.encoding = "UTF-8"
 }
-
 compileJava.options.encoding = 'UTF-8'
+
+
