--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
 
   server:
     build: # 디렉토리에 있는 도커파일 이용해서 이미지 빌드
-      context: src
-      dockerfile: src/Dockerfile
+      context: .
+      dockerfile: Dockerfile
     container_name: esg-spring-server
     ports:
       - 8080:8080
