--- a/build.gradle
+++ b/build.gradle
@@ -1,51 +1,67 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.1.10'
-	id 'io.spring.dependency-management' version '1.1.4'
+    id 'java'
+    id 'org.springframework.boot' version '3.1.10'
+    id 'io.spring.dependency-management' version '1.1.4'
+    id 'com.diffplug.spotless' version '6.11.0'
 }
 
 group = 'ict'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+    sourceCompatibility = '17'
 }
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	//org.json
-	implementation 'org.json:json:20220924'
-	// Swagger
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
-	// spring boot
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-	testImplementation 'org.springframework.security:spring-security-test'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
-	annotationProcessor 'org.projectlombok:lombok'
+    //org.json
+    implementation 'org.json:json:20220924'
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+    // spring boot
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+    testImplementation 'org.springframework.security:spring-security-test'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
+    annotationProcessor 'org.projectlombok:lombok'
 
 
 }
+
+tasks.register('updateGitHooks', Copy) {
+    from(file("${rootProject.rootDir}/.githooks/pre-commit"))
+    into(file("${rootProject.rootDir}/.git/hooks"))
+}
+
+tasks.register('makeGitHooksExecutable', Exec) {
+    commandLine("chmod", "+x", "${rootProject.rootDir}/.git/hooks/pre-commit")
+    dependsOn('updateGitHooks')
+}
+
+tasks.named('compileJava', JavaCompile) {
+    dependsOn('makeGitHooksExecutable')
+}
+
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
-tasks.withType(JavaCompile){
-	options.encoding = "UTF-8"
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 compileJava.options.encoding = 'UTF-8'
 
