--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,11 @@ tasks.named('test') {
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
+
+jar {
+    enabled = false
+}
+
 compileJava.options.encoding = 'UTF-8'
 
 
