fix : docker-compose.yml Dockerfile not found 해결

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   server:
     build: # 디렉토리에 있는 도커파일 이용해서 이미지 빌드
       context: .
-      dockerfile: .
+      dockerfile: Dockerfile
     container_name: esg-spring-server
     ports:
       - 8080:8080
