Revert "chore : .gitignore 수정"
This reverts commit 03fa5ffbc7a19886e5ae36f6f5a49fa7a3b1d208.

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,17 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### common settings ###
-/src/main/**/*.properties
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
 .idea
@@ -16,3 +25,13 @@ build/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
