--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ plugins {
 group = 'ict'
 version = '0.0.1-SNAPSHOT'
 
+ext {
+    set('springCloudVersion', "2022.0.2")
+}
+
 java {
     sourceCompatibility = '17'
 }
@@ -23,12 +27,14 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.cloud:spring-cloud-config-client'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     //org.json
     implementation 'org.json:json:20220924'
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     // spring boot
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
@@ -38,9 +44,15 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
     annotationProcessor 'org.projectlombok:lombok'
-
-
+    compileOnly 'org.projectlombok:lombok'
 }
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
 
 tasks.register('updateGitHooks', Copy) {
     from(file("${rootProject.rootDir}/.githooks/pre-commit"))
